WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
142441
Don't call RenderLayerCompositor::needsToBeComposited() so many times
https://bugs.webkit.org/show_bug.cgi?id=142441
Summary
Don't call RenderLayerCompositor::needsToBeComposited() so many times
Simon Fraser (smfr)
Reported
2015-03-07 11:11:47 PST
RenderLayerCompositor::needsToBeComposited() is called from ensureBacking(), but RenderLayerCompositor::computeCompositingRequirements() has already computed this. (Also lots of assertions call it).
Attachments
Patch
(15.60 KB, patch)
2015-03-08 11:26 PDT
,
Simon Fraser (smfr)
no flags
Details
Formatted Diff
Diff
Patch
(15.66 KB, patch)
2015-03-08 11:47 PDT
,
Simon Fraser (smfr)
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2015-03-08 11:26:39 PDT
Created
attachment 248189
[details]
Patch
Simon Fraser (smfr)
Comment 2
2015-03-08 11:47:42 PDT
Created
attachment 248192
[details]
Patch
Brent Fulgham
Comment 3
2015-03-08 12:23:28 PDT
Comment on
attachment 248192
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=248192&action=review
R=me
> Source/WebCore/rendering/RenderLayerCompositor.cpp:953 > +
Should we assert that renderer is non-null for debug builds?
Simon Fraser (smfr)
Comment 4
2015-03-08 15:55:26 PDT
Comment on
attachment 248192
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=248192&action=review
>> Source/WebCore/rendering/RenderLayerCompositor.cpp:953 >> + > > Should we assert that renderer is non-null for debug builds?
We'll crash right away, so I don't think so.
WebKit Commit Bot
Comment 5
2015-03-08 16:39:44 PDT
Comment on
attachment 248192
[details]
Patch Clearing flags on attachment: 248192 Committed
r181247
: <
http://trac.webkit.org/changeset/181247
>
WebKit Commit Bot
Comment 6
2015-03-08 16:39:48 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug